[package]
name = "disposables_protocol"
version = "99.99.99"
edition = "2021"
license = "GPL-3.0"
description = '''
Protocol definitions for Disposables library to communicate with DLC container.
'''
homepage = "https://github.com/akashrawal/disposables"
repository = "https://github.com/akashrawal/disposables"
readme = "../README.md"

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"

