[package]
name = "disposables"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0"
description = '''
Run your test dependencies in disposable containers."
'''
homepage = "https://github.com/akashrawal/disposables"
repository = "https://github.com/akashrawal/disposables"
readme = "../README.md"

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1"

disposables_protocol = {version = "0", path = "../protocol"}

[dev-dependencies]
log = "0.4.22"
env_logger = "0.11.5"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.40.0", features = ["full"] }
