[package]
name = "disposables"
version = "0.1.8"
edition = "2021"
license = "GPL-3.0"
description = '''
Run your test dependencies in disposable containers."
'''
homepage = "https://github.com/akashrawal/disposables"
repository = "https://github.com/akashrawal/disposables"
readme = "../README.md"

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1"
base64 = "0.22.1"

futures = {version = "0.3", optional = true}

disposables_protocol = {version = "0.1.8", path = "../protocol"}
log = "0.4.22"


[features]
async = ["dep:futures"]
